# ai-engineer-toolset

./: .env.example  .gitignore  README.md  pyproject.toml  update.sh
ai-assistant/: AGENT.md  AGENTS.md
ai-assistant/skills/: daily-report.md
ai-assistant/skills/add-service/: SKILL.md
ai-assistant/skills/daily-report/: SKILL.md
cli/: __init__.py  __main__.py  app.py
cli/screens/: __init__.py  config_editor.py  logs.py  setup_wizard.py
cli/services/: __init__.py  health.py  lifecycle.py  models.py  registry.py
docs/: atk-roadmap.md  atk-spec.md  backup-feature-spec.md  cli-architecture.md  service-yaml-spec.md
mcp/: README.md  elevenlabs-tts.sh  obsidian-edit.sh  openmemory.sh  piper-tts.sh
patches/: piper-tts-mcp.patch
scripts/: langfuse-maintenance.sh
services/langfuse/: docker-compose.yaml  maintenance.sh  service.yaml  update.sh
services/languagetool/: docker-compose.yml  service.yaml  update.sh
services/openmemory/: Dockerfile.dashboard  README.md  docker-compose.yml  models.yml  service.yaml  update.sh
services/piper-tts/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  service.yaml  test-voices.sh  update.sh
